// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should render the correct snapshot of the checked state 1`] = `
<label
  class="css-1vof294-Checkbox"
  for=":r0:"
>
  <input
    checked=""
    class="css-l7v0wq-Checkbox"
    id=":r0:"
    type="checkbox"
  />
  <span>
    My Checkbox
  </span>
</label>
`;

exports[`Checkbox should render the correct snapshot of the disabled state 1`] = `
<label
  class="css-1okvwha-Checkbox"
  for=":r0:"
>
  <input
    class="css-l7v0wq-Checkbox"
    disabled=""
    id=":r0:"
    type="checkbox"
  />
  <span>
    My Checkbox
  </span>
</label>
`;

exports[`Checkbox should render the correct snapshot of the unchecked state 1`] = `
<label
  class="css-1vof294-Checkbox"
  for=":r0:"
>
  <input
    class="css-l7v0wq-Checkbox"
    id=":r0:"
    type="checkbox"
  />
  <span>
    My Checkbox
  </span>
</label>
`;
